<resources>
    <string name="app_name">Baking</string>
    <string name="title_card_detail">Card Detail</string>
    <string name="api_url">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="ingredients_list">Ingredients list</string>
    <string name="open_recipe">Open recipe</string>
    <string name="recipe_image">Recipe image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="open">Open</string>
    <string name="see">See</string>
    <string name="view">View</string>
    <string name="ingredients">ingredients</string>
    <string name="steps">steps</string>
    <string name="short_description">Short description</string>
    <string name="prev_step">Prev step</string>
    <string name="next_step">Next step</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_button">Widget button</string>
    <string name="bullet">●</string>
    <string name="nutella_pie">Nutella Pie</string>
</resources>
